--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'androidx.navigation.safeargs'
 }
 
 android {
@@ -67,4 +68,6 @@ dependencies {
 
     def coil_version = "1.2.2"
     implementation "io.coil-kt:coil:$coil_version"
+
+    implementation "androidx.preference:preference-ktx:1.1.1"
 }
