--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,24 +51,27 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation "androidx.preference:preference-ktx:1.1.1"
 
-    def nav_version = "2.3.5"
+    implementation 'com.google.android.material:material:1.3.0'
+
+    final nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-    def hilt_version = "2.37"
+    final hilt_version = "2.37"
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
-    def retrofit_version = "2.6.1"
+    final retrofit_version = "2.6.1"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
-    def coil_version = "1.2.2"
+    final coil_version = "1.2.2"
     implementation "io.coil-kt:coil:$coil_version"
 
-    implementation "androidx.preference:preference-ktx:1.1.1"
+    final coroutines_version = "1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 }
